# evertesting_one

./: .gitignore  compose.yml  improvements.txt  questions_functional_testing.txt  questions_non_functional_testing.txt  questions_test_automation.txt  readme.md
ePublisher/: Dockerfile  pyproject.toml
ePublisher/src/: main.py  settings.py  sql.py
eRabbit/: Dockerfile  init.sh
eReceiver/: Dockerfile  pyproject.toml
eReceiver/src/: main.py  settings.py
eReceiver/src/api/v1/models/: task.py
eReceiver/src/api/v1/routes/: data.py
eReceiver/tests/: __init__.py  test_data_endpoint.py
eValidator/: Dockerfile  pyproject.toml
eValidator/src/: main.py  settings.py  tutorial.db
