[tool.poetry]
name = "epublisher"
version = "0.1.0"
description = ""
authors = ["razvan.blaga <razvan.paul.blaga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cloudevents = "^1.11.0"
aiormq = "^6.8.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
